# glass-compat-numpy

./: setup.cfg
glass-compat-numpy/: __init__.py  healpix.py  random.py
glass/compat/: _numpy.py
glass/compat/numpy/: __init__.py
glass_compat_numpy/: __init__.py  random.py
