[metadata]
name = glass-compat-numpy
version = 2023.3.dev0
maintainer = Nicolas Tessore
maintainer_email = n.tessore@ucl.ac.uk
description = Numpy compatibility for GLASS
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/glass-dev/glass-compat-numpy
project_urls =
    Documentation = https://glass.readthedocs.io/
    Issues = https://github.com/glass-dev/glass-compat-numpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    array_api_compat>=1.1
    numpy
    healpix>=2022.11.1
    healpy>=1.15.0
packages = find:

[options.packages.find]
include = glass_compat_numpy*

[options.extras_require]
test =
    pytest

[options.entry_points]
glass.array_namespaces =
    array_api_compat = array_api_compat:get_namespace
glass.random_namespaces =
    numpy = glass_compat_numpy:random_namespace
glass.healpix_namespaces =
    numpy = glass_compat_numpy:healpix_namespace

[flake8]
ignore = E226,E501,E741
